# sim800_ups_monitor

./: 2stm.cmd  Cargo.toml  README.md  d.cmd  memory.x  openocd.cfg  size.cmd
.cargo/: config
ino/: esp2stm.ino  relay_server.ino
src/: context.rs  eeprom.rs  errors.rs  esp01.rs  interrupts.rs  main.rs  megatec.rs  sensors.rs  sim.rs  sim800l.rs  temp.rs  traits.rs  ups.rs  voltage.rs
