[package]
name = "sim800_ups_monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
#nb = "0.1.2"
nb = "1.0.0"
#embedded-hal = "0.2.3"
embedded-hal = "0.2.6"
heapless = "0.7.7"
eeprom24x = "0.4.0"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f1xx-hal]
#version = "0.5.2"
version = "0.7.0"
features = ["stm32f103", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "sim800_ups_monitor"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация
opt-level = "z"

